--- a/app/src/main/res/layout/item_location_weather_view.xml
+++ b/app/src/main/res/layout/item_location_weather_view.xml
@@ -21,11 +21,12 @@
             android:text="@string/remove"
             android:textColor="@color/white" />
 
-        <!-- Your main layout here -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="55dp"
             android:background="@color/white"
+            android:clickable="true"
+            android:focusable="true"
             android:gravity="center_vertical"
             android:minHeight="50dp"
             android:orientation="horizontal">
@@ -77,7 +78,7 @@
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:contentDescription="@null"
-                android:padding="5dp"
+                android:padding="8dp"
                 android:src="@drawable/ic_wind_direction" />
 
         </LinearLayout>
