--- a/app/src/main/res/drawable/background_gray_round_radius.xml
+++ b/app/src/main/res/drawable/background_gray_round_radius.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="#EEEEEE" />
     <stroke
-        android:width="0.5dp"
-        android:color="#B1BCBE" />
+        android:width="1px"
+        android:color="#E5E5E5" />
     <corners android:radius="10dp" />
 </shape>
