--- a/app/src/main/res/layout/fragment_dialog_add_location.xml
+++ b/app/src/main/res/layout/fragment_dialog_add_location.xml
@@ -6,37 +6,62 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/background_white_round_radius"
+        android:clickable="true"
+        android:focusable="true"
         android:orientation="vertical">
 
-        <FrameLayout
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:padding="5dp">
 
-            <EditText
-                android:id="@+id/search_city_edt"
+            <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:background="@drawable/background_gray_edt"
-                android:drawableStart="@drawable/ic_baseline_search_24"
-                android:drawablePadding="8dp"
-                android:gravity="center_vertical"
-                android:hint="@string/enter_city_name_to_search"
-                android:inputType="text"
-                android:maxLines="1"
-                android:padding="5dp"
-                android:textSize="15sp" />
+                android:layout_toStartOf="@+id/cancel_tv">
 
-            <ImageView
-                android:id="@+id/clear_ic"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_gravity="center_vertical|end"
-                android:layout_marginEnd="15dp"
-                android:padding="7dp"
-                android:src="@drawable/ic_clear_gray"
-                android:visibility="visible" />
-        </FrameLayout>
+                <EditText
+                    android:id="@+id/search_city_edt"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:background="@drawable/background_gray_round_radius"
+                    android:drawableStart="@drawable/ic_baseline_search_24"
+                    android:drawablePadding="8dp"
+                    android:gravity="center_vertical"
+                    android:hint="@string/enter_city_name_to_search"
+                    android:inputType="text"
+                    android:maxLines="1"
+                    android:paddingHorizontal="5dp"
+                    android:paddingVertical="8dp"
+                    android:textColor="@color/black"
+                    android:textColorHint="@color/gray"
+                    android:textSize="14sp" />
+
+                <ImageView
+                    android:id="@+id/clear_ic"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_gravity="center_vertical|end"
+                    android:layout_marginEnd="15dp"
+                    android:contentDescription="@null"
+                    android:padding="7dp"
+                    android:src="@drawable/ic_clear_gray"
+                    android:visibility="gone"
+                    tools:visibility="visible" />
+            </FrameLayout>
+
+            <TextView
+                android:id="@+id/cancel_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:padding="5dp"
+                android:text="@string/cancel"
+                android:textColor="@color/colorBlue" />
+
+        </RelativeLayout>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/location_rv"
