update ui test case with espresso

--- a/app/src/main/res/layout/fragment_dialog_add_location.xml
+++ b/app/src/main/res/layout/fragment_dialog_add_location.xml
@@ -64,7 +64,7 @@
         </RelativeLayout>
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/location_rv"
+            android:id="@+id/search_location_rv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
