--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -56,11 +56,10 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
                     android:gravity="center"
-                    android:orientation="horizontal"
-                    android:visibility="gone">
+                    android:orientation="horizontal">
 
                     <ImageView
-                        android:id="@+id/weather_status_iv"
+                        android:id="@+id/main_weather_status_iv"
                         android:layout_width="35dp"
                         android:layout_height="35dp"
                         android:baselineAlignBottom="true"
@@ -78,7 +77,7 @@
                 </LinearLayout>
 
                 <TextView
-                    android:id="@+id/temperature_tv"
+                    android:id="@+id/main_temperature_tv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
@@ -104,7 +103,7 @@
                         android:orientation="horizontal">
 
                         <TextView
-                            android:id="@+id/wind_status_tv"
+                            android:id="@+id/main_wind_status_tv"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_centerVertical="true"
@@ -116,10 +115,10 @@
                             tools:text="Wind: 2.7m/s NNE" />
 
                         <ImageView
-                            android:id="@+id/direction_wind_iv"
+                            android:id="@+id/main_direction_wind_iv"
                             android:layout_width="20dp"
                             android:layout_height="20dp"
-                            android:layout_alignEnd="@+id/wind_status_tv"
+                            android:layout_alignEnd="@+id/main_wind_status_tv"
                             android:layout_centerVertical="true"
                             android:contentDescription="@null"
                             android:src="@drawable/ic_wind_direction"
