--- a/app/src/main/res/layout/item_location_weather_view.xml
+++ b/app/src/main/res/layout/item_location_weather_view.xml
@@ -22,6 +22,7 @@
             android:textColor="@color/white" />
 
         <LinearLayout
+            android:id="@+id/content_view"
             android:layout_width="match_parent"
             android:layout_height="55dp"
             android:background="@color/white"
